--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,25 @@ section {
     color: white;
 }
 
-/* VIDEO */
-.video iframe {
-    margin-top: 20px;
-    border-radius: 15px;
+.video {
+    padding: 40px 20px;
+}
+
+.video-container {
+    position: relative;
+    width: 80%;
+    max-width: 800px;
+    margin: auto;
+    padding-bottom: 45%; /* Rasio 16:9 */
+    height: 0;
+}
+
+.video-container iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
 }
 
 /* FOOTER */
