--- a/css/style.css
+++ b/css/style.css
@@ -44,24 +44,22 @@ section {
 }
 
 .video {
-    padding: 40px 20px;
+    width: 100%;
+    padding: 60px 0;
+    text-align: center;
 }
 
 .video-container {
-    position: relative;
-    width: 80%;
-    max-width: 800px;
-    margin: auto;
-    padding-bottom: 45%; /* Rasio 16:9 */
-    height: 0;
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto; /* membuat rata kiri dan kanan */
 }
 
 .video-container iframe {
-    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 500px;
     border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
 
 /* FOOTER */
