--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,10 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url("website/background.jpg") no-repeat center center/cover;
+    background-image: url("../website/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* OVERLAY GELAP */
