--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,30 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* HERO SECTION */
 .hero {
     position: relative;
     width: 100%;
     height: 100vh;
+
+    /* PATH GAMBAR YANG BENAR */
     background-image: url("../website/background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-/* OVERLAY GELAP */
+/* LAPISAN AGAR GAMBAR SAMAR-SAMAR */
 .hero-overlay {
     position: absolute;
-    inset: 0;
-    background: rgba(0, 40, 70, 0.75);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    /* SEMAKIN BESAR ANGKA TERAKHIR → SEMAKIN GELAP */
+    background-color: rgba(0, 40, 70, 0.65);
 }
+
 
 /* KONTEN */
 .hero-content {
